<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fonts_be_regular">fonts/be_regular.ttf</string>
    <string name="fonts_be_bold">fonts/be_bold.ttf</string>
    <string name="fonts_be_semi_bold">fonts/be_semi_bold.ttf</string>
    <string name="fonts_be_extra_bold">fonts/be_extra_bold.ttf</string>
    <string name="fonts_be_medium">fonts/be_medium.ttf</string>

    <string name="error_network_error_des">No network available, please check your WiFi or Data connection</string>


    <string name="host">30.55.178.125</string>
    <string name="port">3000</string>
    <string name="action_settings">Options</string>
    <string name="dialog_calling">%1$s is calling ……</string>
    <string name="dialog_answer">Answer</string>
    <string name="dialog_hangup">Hangup</string>

    <string name="action_next">Next</string>
    <string name="action_ok">Ok</string>
    <string name="action_no">No</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_skip">Skip</string>
    <string name="action_yes">Yes</string>
    <string name="action_try_again">Try Again</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="connect_to_browser">Connect to browser</string>
    <string name="connected">Connected</string>
    <string name="upgrade_pro">Upgrade Pro</string>
    <string name="support">Support</string>

    <string name="des">Open browser on your windows PC or Mac\nthen go to <u><font color="#0091ea"><b>https://abmirroring.tv</b></font></u></string>
    <string name="scan_qr_code_to_connect">Scan QR code to connect</string>
    <string name="or_enter_the_code">Or enter the code</string>
    <string name="connect">Connect</string>
    <string name="https_abmirroring_tv">https://abmirroring.tv</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="hold_over_qr_code">Hold over QR code</string>
    <string name="you_are_connected_to_browser">You are connected to browser</string>
    <string name="start_mirroring">Start Mirroring</string>
    <string name="now_let_s_mirror_your_screen">Now, let’s mirror your screen</string>
    <string name="pro_version">PRO VERSION</string>
    <string name="lifetime_updates_no_5_minutes_trial_limit">Lifetime updates\nNo 5 minutes trial limit</string>
    <string name="you_are_using_a_trial_version_mirroring_will_stop_after_5_minutes">You are using a trial version. Mirroring will stop\nafter 5 minutes</string>
    <string name="allow_audio">Allow Audio</string>
    <string name="upgrade_to_pro_version">Upgrade to Pro version</string>
    <string name="about_screen_mirror">About Screen Mirror</string>
    <string name="send_your_feedback">Send your feedback</string>
    <string name="recommend_this_app_to_a_friend">Recommend this app to a friend</string>
    <string name="rate_this_app">Rate this app</string>

    <string name="camera_permission_warning">Camera permission has been disabled. Please enable it</string>
    <string name="location_permission_warning">Location permission has been disabled. Please enable it</string>
    <string name="record_audio_permission_warning">Record Audio permission has been disabled. Please enable it</string>
    <string name="phone_permission_warning">Phone permission has been disabled. Please enable it</string>
    <string name="storage_permission_warning">Storage permission has been disabled. Please enable it</string>
</resources>
